@@ -12,6 +12,7 @@ Application Changes:
 - Added support for bonus nodes that modify the amount of special attributes burned from Essence loss: specialattburnmultiplier and specialatttotalburnmultiplier. The former stacks additively, the latter stacks multiplicatively.
 - Buying knowledge skill specializations with knowledge skill points in Point Buy- and Life Modules-based character creation methods no longer also costs karma.
 - Greatly sped up load times for characters with lots of weapons and/or gear.
+- Non-retroactive 'ware Essence modifiers now always automatically apply at character creation instead of only to 'ware bought sequentially after acquiring the source of a given non-retroactive 'ware Essence modifier. The non-retroactiveness now only starts applying after character creation.
 
 Data Changes:
 - Added bonus nodes for Shooter (The Soldier) paragon's Compiling dice pool penalty and +1 limit for attack actions. Fixes #4935.
